# CMakeLearn

./: .gitignore  Application.cpp  CMakeLists.txt  GL_App.cpp  GL_EditorLayer.cpp  GL_EditorLayer.h  README.md  Run.bat  RunProject-win32.bat  main.cpp  pch.h
File/: Batch_Render_Class.hpp  C++ New Feature.md  cmake_macro.md  cmake_win32_build.md  entt_usage.md  winCmd.md
GLAD/: CMakeLists.txt
GLAD/include/glad/: glad.h
GLAD/src/: glad.c
IMGUI/: CMakeLists.txt  imconfig.h  imgui.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
IMGUI/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
ImGuizmo/: ImGuizmo.cpp
Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Scene/: Components.h  Entity.cpp  Entity.h  PlatformUtils.cpp  PlatformUtils.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h
include/: Printer.hpp
include2/: test.hpp
lib/Debug/: ImGui.lib  glad.lib
src/: App.cpp  App.h  ApplicationEvent.h  BatchRender_3D.cpp  BatchRender_3D.hpp  Camera.cpp  Camera.h  Data.h  Event.h  GLMath.cpp  GLMath.h  GL_Utils.hpp  Gl_Data.h  ImGuiLayer.cpp  ImGuiLayer.h  IndexBuffer.cpp  IndexBuffer.h  KeyCodes.h  KeyEvent.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  MouseButtonCodes.h  MouseCodes.h  MouseEvent.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  Printer.cpp  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Shape.cpp  Shape.h  Texture.cpp  Texture.h  TimeStep.h  (+10 more)
yaml-cpp/lib/: yaml-cpp.lib
